gcc-14.2.0/gcc/testsuite/gdc.test/runnable/nrvo.d
version https://git-lfs.github.com/spec/v1
oid sha256:fbdb51b5c0cb41b39fead8528f9001d54d16b8d82c052fb063fdae652924a4dc
size 409
